--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Setup MSBuild
         uses: microsoft/setup-msbuild@v1.1
 
-      - name: Build project
-        run: msbuild LoadDll.vcxproj /p:Configuration=Release
+      - name: Build solution
+        run: msbuild src/LoadDll.sln /p:Configuration=Release
 
       - name: Upload binaries
         uses: actions/upload-artifact@v4
